--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cs235.casualbetting" >
 
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:anyDensity="true"
+        />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -9,7 +16,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="locale|layoutDirection">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,23 +26,28 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home" >
+            android:label="@string/title_activity_home"
+            android:configChanges="locale|layoutDirection">
         </activity>
         <activity
             android:name=".BankActivity"
-            android:label="@string/title_activity_bank" >
+            android:label="@string/title_activity_bank"
+            android:configChanges="locale|layoutDirection">
         </activity>
         <activity
             android:name=".SportActivity"
-            android:label="@string/title_activity_sport" >
+            android:label="@string/title_activity_sport"
+            android:configChanges="locale|layoutDirection">
         </activity>
         <activity
             android:name=".BetActivity"
-            android:label="@string/title_activity_bet" >
+            android:label="@string/title_activity_bet"
+            android:configChanges="locale|layoutDirection">
         </activity>
         <activity
             android:name=".SportListActivity"
-            android:label="@string/title_activity_sport_list" >
+            android:label="@string/title_activity_sport_list"
+            android:configChanges="locale|layoutDirection">
         </activity>
     </application>
 
